<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="app_name" translatable="false">Diatronome</string>
  <string name="common_yes">Yes</string>
  <string name="common_no">No</string>
  <string name="action_settings">Settings</string>
  <string name="action_tuner">Tuner</string>
  <string name="action_playnote">Synthesiser</string>
  <string name="action_metronome">Metronome</string>
  <string name="action_about">About</string>

  <!-- &#x266D; == b &#x266F; == # -->
  <string name="tuner_note_sample" translatable="false">Sol&#x266F;<small><small>4</small></small></string>
  <string name="tuner_measure_sample" translatable="false"><![CDATA[+15c\n19 999 Hz\n0.5 %]]></string>

  <string name="metronome_bpm">BPM</string>
  <string name="metronome_timesignature">Time signature</string>
  <string name="metronome_division">Time</string>
  <string name="metronome_subdivision">Division</string>
  <string name="metronome_notificationtitle">Metronome playback</string>
  <string name="metronome_timeconfiguration_sample" translatable="false">0+0+0+0+0+0*0</string>

  <!-- Preferences -->
  <string name="preference_system_title">System</string>
  <string name="preference_system_theme">Theme</string>
  <string name="preference_system_screenon">Keep screen on</string>
  <string name="preference_system_color">Application color</string>
  <string name="preference_system_homescreen">Home screen</string>

  <string name="preference_tuner_title">Tuner</string>
  <string name="preference_tuner_pitch">Pitch calibration for A4</string>
  <string name="preference_tuner_notename">Notes name</string>
  <string name="preference_tuner_usesharpflat">♯ instead of ♭</string>
  <string name="preference_tuner_transposition">Transposition</string>
  <string name="preference_tuner_temperament">Temperament</string>

  <string name="preference_synthesizer_title">Synthesizer</string>
  <string name="preference_synthesizer_waveform">Piano tone</string>
  <string name="preference_synthesizer_touchmode">Piano touch</string>

  <string name="preference_metronome_title">Metronome</string>
  <string name="preference_metronome_waveformaccent">Metronome tone - accent</string>
  <string name="preference_metronome_pitchaccent">Metronome pitch accent</string>
  <string name="preference_metronome_waveformmain">Metronome tone - main</string>
  <string name="preference_metronome_pitchmain">Metronome pitch main</string>
  <string name="preference_metronome_waveformsubdivision">Metronome tone - subdivision</string>
  <string name="preference_metronome_pitchsubdivision">Metronome pitch subdivision</string>
  <string name="preference_metronome_bidirectionalneedle">Metronome Bidirectional needle</string>

  <string name="preference_advanced_title">Advanced</string>
  <string name="preference_advanced_sensitivity">Microphone sensitivity</string>
  <string name="preference_advanced_algorithm">Algorithm</string>
  <string name="preference_advanced_fps">Frame per second</string>

  <!-- about -->
  <string name="about_content"><![CDATA[
    <b><i>Diatronome</i></b> offer you a <i>tuner</i>, a <i>Visual metronome</i> and a <i>Synthesizer</i>.
    This application is open source, privacy friendly and advertisement free.<br/>
    <b>License: </b>%1$s<br/>
    <b>Sources: </b><a href="%2$s">%2$s</a><br/>
    <b>Support: </b><a href="%3$s">%3$s</a><br/>
  ]]></string>
  <string name="about_license" translatable="false">GPLv3</string>
  <string name="about_source" translatable="false"><a href="https://github.com/grizzlyfute/Diatronome">https://github.com/grizzlyfute/Diatronome</a></string>
  <string name="about_support" translatable="false"><a href="https://liberapay.com/grizzlyfute">https://liberapay.com/grizzlyfute</a></string>

  <!-- string array -->
  <string-array name="array_notes_name">
    <item>International (A B C)</item>
    <item>Solfege (Do-Re-Mi)</item>
  </string-array>
  <string-array name="array_notes_name_data" translatable="false">
    <item>1</item>
    <item>2</item>
  </string-array>

  <string-array name="array_notes_name_solfege">
    <item>Do</item>
    <item>Re</item>
    <item>Mi</item>
    <item>Fa</item>
    <item>Sol</item>
    <item>La</item>
    <item>Si</item>
  </string-array>

  <string-array name="array_notes_name_letters">
    <item>C</item>
    <item>D</item>
    <item>E</item>
    <item>F</item>
    <item>G</item>
    <item>A</item>
    <item>B</item>
  </string-array>

  <string-array name="array_theme">
    <item>Follow system</item>
    <item>Light</item>
    <item>Dark</item>
  </string-array>
  <string-array name="array_theme_data" translatable="false">
    <item>MODE_NIGHT_UNSPECIFIED</item>
    <item>MODE_NIGHT_NO</item>
    <item>MODE_NIGHT_YES</item>
  </string-array>

  <string-array name="array_homescreen">
    <item>Tuner</item>
    <item>Metronome</item>
    <item>Player</item>
  </string-array>
  <string-array name="array_homescreen_data" translatable="false">
    <item>HOME_SCREEN_TUNER</item>
    <item>HOME_SCREEN_METRONOME</item>
    <item>HOME_SCREEN_PLAYNOTE</item>
  </string-array>

  <string-array name="array_transposition">
    <item>C</item>
    <item>C&#x266F;</item>
    <item>D</item>
    <item>E&#x266D;</item>
    <item>E</item>
    <item>F</item>
    <item>F&#x266F;</item>
    <item>G</item>
    <item>A&#x266D;</item>
    <item>A</item>
    <item>B&#x266D;</item>
    <item>B</item>
  </string-array>
  <string-array name="array_transposition_data" translatable="false">
    <item>0</item>
    <item>1</item>
    <item>2</item>
    <item>3</item>
    <item>4</item>
    <item>5</item>
    <item>-6</item>
    <item>-5</item>
    <item>-4</item>
    <item>-3</item>
    <item>-2</item>
    <item>-1</item>
  </string-array>

  <string-array name="array_algorithm">
    <item>Envelop Pitch detection</item>
    <item>Yin</item>
    <item>FFT - Spectral</item>
    <!-- <item>Peak detector</item> -->
  </string-array>
  <string-array name="array_algorithm_data"  translatable="false">
    <item>1</item>
    <item>2</item>
    <item>3</item>
    <!-- <item>4</item> -->
  </string-array>

  <!-- EDO = Equals Division Octave = TET = Tone Equal Temperament -->
  <string-array name="array_temperament">
    <item>Equal Temperament - 12 EDO</item>
    <item>Pythagorean - ~53 EDO</item>
    <item>Zarlino/Helmholtz - ~41 EDO</item>
    <item tools:ignore="TypographyFractions">Meantone 1/4 comma - 31 EDO</item>
    <item tools:ignore="TypographyFractions">Meantone 1/5 comma - 43 EDO</item>
    <item tools:ignore="TypographyFractions">Meantone 1/3 comma - 19 EDO</item>
    <item>Chromatic - 108 EDO</item>
    <item>15 EDO, 15 TET</item>
    <item>17 EDO, 17 TET</item>
  </string-array>
  <string-array name="array_temperament_data" translatable="false">
    <item>12</item>
    <item>53</item>
    <item>41</item>
    <item>31</item>
    <item>43</item>
    <item>19</item>
    <item>108</item>
    <item>15</item>
    <item>17</item>
  </string-array>

  <string-array name="array_waveform">
    <item>Sine</item>
    <item>Triangle</item>
    <item>Sawtooth</item>
    <item>Square</item>
    <item>Piano</item>
    <item>Organ</item>
    <item>Drum</item>
    <item>Tom</item>
    <item>Snaredrum</item>
    <item>Cymbal</item>
    <item>Steeldrum</item>
    <item>Bell</item>
    <item>Guitar</item>
    <item>Laser</item>
  </string-array>
  <string-array name="array_waveform_data" translatable="false">
    <item>SINE</item>
    <item>TRIANGLE</item>
    <item>SAWTOOTH</item>
    <item>SQUARE</item>
    <item>PIANO</item>
    <item>ORGAN</item>
    <item>DRUM</item>
    <item>TOM</item>
    <item>SNAREDRUM</item>
    <item>CYMBAL</item>
    <item>STEELDRUM</item>
    <item>BELL</item>
    <item>GUITAR</item>
    <item>LASER</item>
  </string-array>

  <string-array name="array_pianotouch">
    <item>Latch</item>
    <item>Normal</item>
  </string-array>
  <string-array name="array_pianotouch_data" translatable="false">
    <item>1</item>
    <item>2</item>
  </string-array>

  <!-- Android 15 sets a default 60Hz refresh rate for games to optimize power consumption.
       To unlock higher frame rates like 120 FPS, you must now explicitly request them using the Frame Rate API -->
  <string-array name="array_fps">
    <item>0 FPS</item>
    <item>15 FPS</item>
    <item>24 FPS</item>
    <item>30 FPS</item>
    <item>45 FPS</item>
    <item>60 FPS</item>
  </string-array>
  <string-array name="array_fps_data" translatable="false">
    <item>0</item>
    <item>15</item>
    <item>24</item>
    <item>30</item>
    <item>45</item>
    <item>60</item>
  </string-array>
</resources>
