<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <!-- see https://fonts.google.com/icons for drawable -->
  <PreferenceCategory
    app:key="setting_system"
    app:title="@string/preference_system_title">
    <ListPreference
      android:title="@string/preference_system_theme"
      android:key="setting_theme"
      android:icon="@drawable/icon_darkmode"
      android:dialogIcon="@drawable/icon_darkmode"
      android:entries="@array/array_theme"
      android:entryValues="@array/array_theme_data"
      android:defaultValue="MODE_NIGHT_UNSPECIFIED" />
    <SwitchPreference
      android:title="@string/preference_system_screenon"
      android:key="setting_screen_on"
      android:icon="@drawable/icon_screenon"
      android:defaultValue="true"/>
    <org.kalinisa.diatronome.Ui.ColorChooserPreference
      android:defaultValue="@color/color_primary_08"
      android:inputType="numberDecimal"
      android:dialogIcon="@drawable/icon_color"
      android:dialogMessage=""
      android:dialogTitle="@string/preference_system_color"
      android:icon="@drawable/icon_color"
      android:key="setting_color"
      android:negativeButtonText="@android:string/cancel"
      android:positiveButtonText="@android:string/ok"
      android:title="@string/preference_system_color" />
    <ListPreference
      android:title="@string/preference_system_homescreen"
      android:key="setting_home_screen"
      android:icon="@android:drawable/ic_menu_gallery"
      android:dialogIcon="@android:drawable/ic_menu_gallery"
      android:entries="@array/array_homescreen"
      android:entryValues="@array/array_homescreen_data"
      android:defaultValue="HOME_SCREEN_TUNER" />
  </PreferenceCategory>

  <PreferenceCategory
    android:key="setting_tuner"
    android:title="@string/preference_tuner_title">
    <!-- Range is one octave center on 440 Hz. Duplicate min/max in tuner fragment -->
    <org.kalinisa.diatronome.Ui.NumberPickerPreference
      android:inputType="numberDecimal"
      android:maxLength="5"
      android:summary="440 Hz"
      android:defaultValue="440"
      android:icon="@drawable/icon_pitch"
      android:key="setting_pitch_ref"
      android:title="@string/preference_tuner_pitch"
      android:dialogIcon="@drawable/icon_pitch"
      android:dialogMessage=""
      android:dialogTitle="@string/preference_tuner_pitch"
      android:negativeButtonText="@android:string/cancel"
      android:positiveButtonText="@android:string/ok"
      app:min="250"
      app:max="630" />
    <ListPreference
      android:entries="@array/array_notes_name"
      android:entryValues="@array/array_notes_name_data"
      android:defaultValue="1"
      android:dialogIcon="@drawable/icon_notename"
      android:icon="@drawable/icon_notename"
      android:key="setting_note_name"
      android:title="@string/preference_tuner_notename" />
    <SwitchPreference
      android:defaultValue="false"
      android:icon="@drawable/icon_sharpflat"
      android:switchTextOff="\\u266D"
      android:switchTextOn="\\u266F"
      android:key="setting_use_sharp_flat"
      android:title="@string/preference_tuner_usesharpflat" />
    <ListPreference
      android:title="@string/preference_tuner_transposition"
      android:entries="@array/array_transposition"
      android:entryValues="@array/array_transposition_data"
      android:defaultValue="0"
      android:dialogIcon="@drawable/icon_transposition"
      android:icon="@drawable/icon_transposition"
      android:key="setting_transposition" />
    <ListPreference
      android:defaultValue="12"
      android:icon="@drawable/icon_temperament"
      android:dialogIcon="@drawable/icon_temperament"
      android:key="setting_temperament"
      android:title="@string/preference_tuner_temperament"
      android:entries="@array/array_temperament"
      android:entryValues="@array/array_temperament_data" />
  </PreferenceCategory>

  <PreferenceCategory
    android:key="setting_synthesizer"
    android:title="@string/preference_synthesizer_title">
    <org.kalinisa.diatronome.Ui.WaveformPickerPreference
      android:defaultValue="SINE"
      android:icon="@drawable/icon_piano_waveform"
      android:dialogIcon="@drawable/icon_piano_waveform"
      android:key="setting_waveform"
      android:title="@string/preference_synthesizer_waveform"
      app:entries="@array/array_waveform"
      app:entryValues="@array/array_waveform_data" />
    <ListPreference
      android:defaultValue="1"
      android:icon="@drawable/icon_piano"
      android:dialogIcon="@drawable/icon_piano"
      android:key="setting_pianotouch"
      android:title="@string/preference_synthesizer_touchmode"
      android:entries="@array/array_pianotouch"
      android:entryValues="@array/array_pianotouch_data"/>
  </PreferenceCategory>

  <PreferenceCategory
    android:key="setting_metronome"
    android:title="@string/preference_metronome_title">
    <org.kalinisa.diatronome.Ui.WaveformPickerPreference
      android:defaultValue="SINE"
      android:icon="@drawable/icon_metronome_waveform"
      android:dialogIcon="@drawable/icon_metronome_waveform"
      android:key="setting_metronome_waveform_accent"
      android:title="@string/preference_metronome_waveformaccent"
      app:entries="@array/array_waveform"
      app:entryValues="@array/array_waveform_data" />
    <SeekBarPreference
      android:min="0"
      android:max="6"
      android:defaultValue="5"
      android:icon="@drawable/icon_pitch"
      android:key="setting_metronome_pitch_accent"
      android:title="@string/preference_metronome_pitchaccent"
      tools:ignore="UnusedAttribute" />
    <org.kalinisa.diatronome.Ui.WaveformPickerPreference
      android:defaultValue="SINE"
      android:icon="@drawable/icon_metronome_waveform"
      android:dialogIcon="@drawable/icon_metronome_waveform"
      android:key="setting_metronome_waveform"
      android:title="@string/preference_metronome_waveformmain"
      app:entries="@array/array_waveform"
      app:entryValues="@array/array_waveform_data" />
    <SeekBarPreference
      android:icon="@drawable/icon_pitch"
      android:key="setting_metronome_pitch_main"
      android:min="0"
      android:max="6"
      android:defaultValue="4"
      android:title="@string/preference_metronome_pitchmain"
      tools:ignore="UnusedAttribute" />
    <org.kalinisa.diatronome.Ui.WaveformPickerPreference
      android:defaultValue="SINE"
      android:icon="@drawable/icon_metronome_waveform"
      android:dialogIcon="@drawable/icon_metronome_waveform"
      android:key="setting_metronome_waveform_subdivision"
      android:title="@string/preference_metronome_waveformsubdivision"
      app:entries="@array/array_waveform"
      app:entryValues="@array/array_waveform_data" />
    <SeekBarPreference
      android:min="0"
      android:max="6"
      android:defaultValue="3"
      android:icon="@drawable/icon_pitch"
      android:key="setting_metronome_pitch_subdivision"
      android:title="@string/preference_metronome_pitchsubdivision"
      tools:ignore="UnusedAttribute" />

    <SwitchPreference
      android:defaultValue="true"
      android:icon="@drawable/icon_bidirectional"
      android:switchTextOff="@string/common_no"
      android:switchTextOn="@string/common_yes"
      android:key="setting_metronome_bidirectionalneedle"
      android:title="@string/preference_metronome_bidirectionalneedle" />

  </PreferenceCategory>

  <PreferenceCategory
    android:key="setting_advanced"
    android:title="@string/preference_advanced_title">
    <SeekBarPreference
      android:min="0"
      android:max="10"
      android:defaultValue="5"
      android:icon="@drawable/icon_threshold"
      android:key="setting_soundanalyze_threshold"
      android:title="@string/preference_advanced_sensitivity"
      tools:ignore="UnusedAttribute" />
    <ListPreference
      android:defaultValue="1"
      android:icon="@drawable/icon_algo"
      android:dialogIcon="@drawable/icon_algo"
      android:key="setting_soundanalyze_algorithm"
      android:title="@string/preference_advanced_algorithm"
      android:entries="@array/array_algorithm"
      android:entryValues="@array/array_algorithm_data"
      tools:ignore="UnusedAttribute" />
    <ListPreference
      android:defaultValue="30"
      android:icon="@android:drawable/ic_menu_slideshow"
      android:dialogIcon="@android:drawable/ic_menu_slideshow"
      android:key="setting_advanced_fps"
      android:title="@string/preference_advanced_fps"
      android:entries="@array/array_fps"
      android:entryValues="@array/array_fps_data"
      tools:ignore="UnusedAttribute" />

    <Preference
      android:key="setting_about"
      android:title="@string/action_about"
      android:summary="@string/action_about"
      android:icon="@drawable/menu_about"
      />

    <org.kalinisa.diatronome.Ui.NumberPickerPreference
      android:inputType="numberDecimal"
      android:maxLength="3"
      android:title="@string/metronome_bpm"
      android:defaultValue="60"
      android:key="setting_metronome_bpm"
      app:isPreferenceVisible="false"/>
    <EditTextPreference
      android:defaultValue="4333"
      android:key="setting_metronome_beatsig"
      app:isPreferenceVisible="false" />
    <org.kalinisa.diatronome.Ui.NumberPickerPreference
      android:inputType="numberDecimal"
      android:defaultValue="43"
      android:key="setting_piano_octaves"
      app:isPreferenceVisible="false" />
    <!-- Version of this setting, for a future use -->
    <EditTextPreference
      android:defaultValue="@string/versionName"
      android:key="setting_version"
      app:isPreferenceVisible="false" />
  </PreferenceCategory>

</PreferenceScreen>